# Computer_Vision_CNC

./: .env.example  .env.production  .env.test  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT_READY.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  TESTING.md  TEST_RESULTS.md  demo_app.py  docker-compose.simple.yml  main.py  pyproject.toml  requirements-compliance.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup.py  setup_dev.py  test_api.py  test_deployment.py
.github/: PULL_REQUEST_TEMPLATE.md
docs/: ARCHITECTURE_COMPLETE.md  ARCHITECTURE_SUCCESS.md  DEPLOYMENT_GUIDE.md  index.md  industry-4.0-guide.md
docs/architecture/: system_architecture.md
docs/security/: security_framework.md
kubernetes/: api-deployment.yaml  controller-deployment.yaml  ingress-network.yaml  monitoring-config.yaml  storage-config.yaml  vision-deployment.yaml
scripts/: deploy.sh
src/cv_cnc_manufacturing/: __init__.py
src/cv_cnc_manufacturing/api/: __init__.py
src/cv_cnc_manufacturing/cnc/: __init__.py
src/cv_cnc_manufacturing/computer_vision/: __init__.py
src/cv_cnc_manufacturing/core/: __init__.py  base.py  config.py  exceptions.py
src/cv_cnc_manufacturing/development/: __init__.py
tests/: conftest.py  test_architecture_verification.py
tests/integration/: test_cnc_integrations.py
tests/unit/: test_computer_vision.py
